# zimg

./: 0001.patch  Makefile.am  meson.build  meson_options.txt
src/zimg/common/x86/: avx2_util.h  x86util.cpp  x86util.h
src/zimg/depth/: dither.cpp
src/zimg/depth/arm/: depth_convert_neon.cpp  dither_arm.cpp  error_diffusion_neon.cpp
src/zimg/depth/arm/simde/: simde-common.h
src/zimg/depth/arm/simde/x86/: avx.h  avx2.h  f16c.h  fma.h  sse.h  sse2.h  sse4.1.h
src/zimg/graph/: graphbuilder.cpp  graphbuilder.h
src/zimg/resize/: resize.cpp  resize.h
